--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "monkewrapper",
   "version": "1.0.0",
   "description": "A Wrapper to help you interact with the MonkeDev API",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
