--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   },
   "homepage": "https://github.com/MonkeDev/monkewrapper#readme",
   "dependencies": {
-    "phin": "^3.5.1"
+    "node-fetch": "^2.6.1"
   },
   "keywords": [
-      "monkey",
-      "monkeyapi",
-      "monkewrapper"
-  ]
+    "monkey",
+    "monkeyapi",
+    "monkewrapper",
+    "api",
+    "wrapper"
+  ],
+  "devDependencies": {
+    "discord.js": "^12.5.1",
+    "eris": "^0.14.0"
+  }
 }
