--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "monkewrapper",
-  "version": "1.0.3",
+  "name": "@monkedev/monkewrapper",
+  "version": "1.0.0",
   "description": "A Wrapper to help you interact with the MonkeDev API",
   "main": "src/index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/MonkeDev/monkewrapper.git"
   },
-  "author": "Swaggger/BurnedBed",
+  "author": "MonkeDev",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/MonkeDev/monkewrapper/issues"
